--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 //For environment config    (optional)
 
-PORT=4000
-MONGO_URI=mongodb://localhost:27017/salesDB
+PORT=3000
+MONGO_URI=mongodb+srv://govindrajpoot760:eeNGiiphEb2egn5u@cluster0.2ift0zy.mongodb.net/Inventorys
+
+//MONGO_URI=mongodb://localhost:27017/salesDB
+//MONGO_URI=mongodb+srv://govindrajpoot760:eeNGiiphEb2egn5u@cluster0.2ift0zy.mongodb.net/Inventorys
+
+ 
